--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <div class="tarjeta">
 
 <div class="cara frontal">
-<img src="https://via.placeholder.com/150" alt="Jugador de Fútbol">
+<img src="jugador.png" alt="Jugador de Fútbol">
 <h2>Jugador de Fútbol</h2>
 <p>Posición: Delantero</p>
-<button id="verDetalles" onclick="voltearTarjeta()">Ver Detalles</button>
+<button id="verDetalles">Ver Detalles</button>
 </div>
 <div class="cara posterior">
 <h2>Detalles del Jugador</h2>
